--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "cookie-parser": "~1.4.3",
+    "csurf": "1.8.3",
     "date-utils": "^1.2.21",
     "debug": "~2.6.9",
     "express": "~4.16.0",
