--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "node_modules/mocha/bin/mocha --timeout 10000"
   },
   "dependencies": {
+    "aws-sdk": "^2.831.0",
     "cookie-parser": "~1.4.3",
     "csurf": "1.8.3",
     "date-utils": "^1.2.21",
